Change h1 color from light to dark color to fix contrast error. Record in bugs, README.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ h1 {
     font-family: 'The Nautigal', sans-serif;
     font-size: 100px;
     text-align: center;
-    color: ivory;
+    color: rgb(82, 46, 46);
 }
 
 /*About Section*/
